--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     />
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
         <h2 class="nav-title">Ma<span class="text-primary">r</span>y</h2>
         <ul>
           <li>Portfolio</li>
           <li>Blog</li>
-          <li><button class="btn-primary">Hir Me</button></li>
+          <li><button class="btn-primary">Hire Me</button></li>
         </ul>
       </nav>
       <!-- header banner -->
@@ -41,5 +41,35 @@
         <img src="images/hardy.png" alt="" />
       </div>
     </header>
+    <main>
+      <section class="about">
+        <h3 class="section-title">About Me</h3>
+        <p class="section-description">
+          I, m a designer & developer with a passion for web design. I enjoy
+          developing simple, clean and slick websites that provide real value to
+          the end user. Thousands of clients have procured exceptional resulfs
+          while working with me. Delivering work within time and budget which
+          meets clients requirements in our mata.
+        </p>
+        <div class="about-info-container">
+          <div class="about-info">
+            <p class="info-title">Name:</p>
+            <p class="info-description">Mary Hardy</p>
+          </div>
+          <div class="about-info">
+            <p class="info-title">Eamil:</p>
+            <p class="info-description">info@gmail.com</p>
+          </div>
+          <div class="about-info">
+            <p class="info-title">Speciality:</p>
+            <p class="info-description">Web Dev</p>
+          </div>
+          <div class="about-info">
+            <p class="info-title">Location:</p>
+            <p class="info-description">Dhaka, Bangladesh</p>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
