--- a/index.html
+++ b/index.html
@@ -70,6 +70,146 @@
           </div>
         </div>
       </section>
+      <!-- what i do section -->
+      <section class="what-i-do">
+        <h3 class="section-title">What I Do</h3>
+        <div class="skills-container">
+          <div class="skill">
+            <img src="images/icons/js.png" alt="" />
+            <p class="skill-title">Vanila Javascript</p>
+            <p class="skill-description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Mollitia, deserunt rem aperiam magnam necessitatibus est.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="images/icons/react.png" alt="" />
+            <p class="skill-title">React</p>
+            <p class="skill-description">
+              Consectetur molestiae accusamus aut doloribus, consequatur
+              recusandae voluptatem omnis minus esse, deleniti rem, voluptates
+              ratione.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="images/icons/nodejs.png" alt="" />
+            <p class="skill-title">Node.js</p>
+            <p class="skill-description">
+              Magni quasi laboriosam ipsum recusandae omnis hic facilis
+              voluptate. Ipsum nostrum ipsam aut sequi molestiae?
+            </p>
+          </div>
+          <div class="skill">
+            <img src="images/icons/mongo.png" alt="" />
+            <p class="skill-title">MongoDb</p>
+            <p class="skill-description">
+              Ab, vel ullam. Itaque cumque voluptatum exercitationem illo
+              corporis veritatis tempore sequi asperiores accusamus eius.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- resume section -->
+      <section class="resume">
+        <h3 class="section-title">A summery of My Resume</h3>
+        <div class="resume-content">
+          <div>
+            <h3 class="resume-title">My Education</h3>
+            <div class="resume-item">
+              <h4 class="title">Master in Computer Engineering</h4>
+              <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+              <p class="description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-item">
+              <h4 class="title">Master in Computer Engineering</h4>
+              <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+              <p class="description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-item">
+              <h4 class="title">Master in Computer Engineering</h4>
+              <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+              <p class="description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+          <div>
+            <h3 class="resume-title">My Experience</h3>
+            <div class="resume-item">
+              <h4 class="title">Master in Computer Engineering</h4>
+              <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+              <p class="description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-item">
+              <h4 class="title">Master in Computer Engineering</h4>
+              <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+              <p class="description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-item">
+              <h4 class="title">Master in Computer Engineering</h4>
+              <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+              <p class="description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="resume-button">
+          <button class="btn-primary">Download CV</button>
+        </div>
+      </section>
+      <!-- contact section -->
+      <section class="contact">
+        <div>
+          <h3 class="section-title">Lets Connect</h3>
+          <p>
+            Please fill out the form on this section to contact with me or call
+            between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+          </p>
+          <a href=""> <img src="images/icons/facebook.png" alt="" /> </a>
+          <a href=""> <img src="images/icons/twitter.png" alt="" /> </a>
+          <a href=""> <img src="images/icons/insta.png" alt="" /> </a>
+        </div>
+        <div>
+          <h3 class="section-title">Lets message me</h3>
+          <form action="">
+            <input type="text" name="" id="" placeholder="Your Name" />
+            <input type="email" name="" id="" placeholder="Enter your Email" />
+            <textarea
+              name=""
+              id=""
+              cols="30"
+              rows="10"
+              placeholder="message"
+            ></textarea>
+            <input class="btn-primary" type="submit" value="Submit" />
+          </form>
+        </div>
+      </section>
     </main>
   </body>
 </html>
