compleate module5 project

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       <section class="contact">
         <div>
           <h3 class="section-title">Lets Connect</h3>
-          <p>
+          <p class="section-description">
             Please fill out the form on this section to contact with me or call
             between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
           </p>
@@ -211,5 +211,8 @@
         </div>
       </section>
     </main>
+    <footer>
+      <p>&copy; Alrights reserved by pHero-team</p>
+    </footer>
   </body>
 </html>
