--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Developer Portfolio</title>
+    <!-- font awsome -->
+    <script
+      src="https://kit.fontawesome.com/248c967ae4.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- link css -->
     <link rel="stylesheet" href="styles/portfolio.css" />
+
     <!-- link font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -36,7 +42,9 @@
             Shot what able cold new see hold.Friendly as an betrayed formerly
             he. Morning because as to society behaved moments.
           </p>
-          <button class="btn-primary">Download CV</button>
+          <button class="btn-primary">
+            <i class="fa-solid fa-download"></i> Download CV
+          </button>
         </div>
         <img src="images/hardy.png" alt="" />
       </div>
@@ -179,7 +187,9 @@
           </div>
         </div>
         <div class="resume-button">
-          <button class="btn-primary">Download CV</button>
+          <button class="btn-primary">
+            <i class="fa-solid fa-download"></i> Download CV
+          </button>
         </div>
       </section>
       <!-- contact section -->
